 -- @email - mod_email_sock_readline() adds a '\0' one position too far
    (Issue 87).
 -- @email - Remove unnecessary zeroing of buffers (Issue 80).
 -- @email - Typo in do_plusmail of '0' instead of '\0' (Issue 90).
 -- @email - Unnecessary strlen() (Issue 81).
 -- @email - do_plusmail loops look at undefined bytes if inputline is
    1, 2, or 3 bytes long (Issue 89). 
 -- @email - Memory leaks (Issue 84).
 -- Fix SIGSEGV when udefault() gets more than 12 arguments.  Fixed by
    Alierak.
 -- @email - initialize input buffer to the empty string to cover
    return(0) error cases.  Probably introduced by Issue 80 fix.  Fixed
    by Alierak.
 -- @email - Comment doesn't match code (Issue 82).
 -- %v accepts accented characters (Issue 91).  Found by Alierak.
 -- sortby() breaks when nested (Issue 88).  Found by Alierak.
 -- @email - Config options may contain CRLF sequences (Issue 76). Found
    by Alierak.
 -- @email - Subject and recipient address may contain CRLF sequences
    (Issue 77). Found by Alierak.
 -- Fix theoretical crash if DNS slave returns half a result.  Found and
    fixed by Alierak.
 -- Fix lbuf leak from Issue 88 fix.  Found and fixed by Alierak.
 -- All return paths from process_command(), new_connection(), and
    check_connect() must restore mudstate.debug_cmd.  Found and fixed
    by Alierak.
 -- Multiple addcom gives no warning (Issue 93). Fixed addcom topic.


Performance Enhancements:
~~~~~~~~~~~~~~~~~~~~~~~~

 -- In MEMORY_BASED, avoid malloc() call each time an attribute is
    added to an object.
 -- Optimize atr_add_raw_LEN() to reduce Firan load time from 40 seconds
    to 15 seconds (which includes firan.db, mail.db, and comsys.db).
    This translates to something upward of 28 MB/s.
 -- Optimize do_comsystem() ability to recognize what is not an alias.
    Alierak.


Cosmetic Changes:
~~~~~~~~~~~~~~~~


Miscellaneous:
~~~~~~~~~~~~~
 -- Add mux_fopen() utility function to replace direct use of fopen().